crates/narrative/tests/compile-fail/non-local-type.stderr
error[E0277]: the type `NotLocalType` cannot be used in this story
 --> tests/compile-fail/non-local-type.rs:9:39
  |
9 |     fn use_non_local_type(&self, arg: NotLocalType);
  |                                       ^^^^^^^^^^^^ this type is not allowed in stories
  |
help: the trait `TestStoryLocalType` is not implemented for `NotLocalType`
 --> tests/compile-fail/non-local-type.rs:4:1
  |
4 | struct NotLocalType;
  | ^^^^^^^^^^^^^^^^^^^
  = note: only types from the standard library or types defined with #[local_type_for] are allowed
note: required by a bound in `assert_local_type`
 --> tests/compile-fail/non-local-type.rs:7:7
  |
6 | #[narrative::story("Test non-local type error")]
  | ------------------------------------------------ required by a bound in this function
7 | trait TestStory {
  |       ^^^^^^^^^ required by this bound in `assert_local_type`
